--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-transformers==4.38.2
+transformers
 accelerate
 bitsandbytes
 optimum
-huggingface_hub==0.22.2
+huggingface_hub
 scikit-build-core
-https://github.com/abetlen/llama-cpp-python/releases/download/v0.2.81-cu124/llama_cpp_python-0.2.81-cp310-cp310-linux_x86_64.whl
+llama-cpp-python
 llama-cpp-agent>=0.2.25
