--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-transformers
-accelerate
-bitsandbytes
-optimum
-huggingface_hub
+huggingface_hub==0.22.2
 scikit-build-core
-llama-cpp-python
+https://github.com/abetlen/llama-cpp-python/releases/download/v0.2.81-cu124/llama_cpp_python-0.2.81-cp310-cp310-linux_x86_64.whl
 llama-cpp-agent>=0.2.25
